--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,13 +7,13 @@
 			<footer class="foot"></footer>
 			<div class="row" style="margin-bottom: 0px;">
 				<div class="body col s3">
-					<a href="mailto:toddylin@hotmail.com"><i class="emoji icon-mail"></i></a>
+					<a href="mailto:{{ site.author.mail }}"><i class="emoji icon-mail"></i></a>
 				</div>
 				<div class="body col s3">
-					<a href="tencent://message/?Uin=1016954699&websiteName=orz.xyz=&Menu=yes"><i class="emoji icon-qq"></i></a>
+					<a href="tencent://message/?Uin={{ site.author.qq}}&websiteName=orz.xyz=&Menu=yes"><i class="emoji icon-qq"></i></a>
 				</div>
 				<div class="body col s3">
-					<a href="http://weibo.com/2079271711/profile?topnav=1&wvr=6" target=_blank><i class="emoji icon-weibo"></i></a>
+					<a href="#" target=_blank><i class="emoji icon-weibo"></i></a>
 				</div>
 				<div class="body col s3">
 					<a href="#" onclick="javascript:addFavorite()"><i class="emoji icon-emo-beer"></i></a>
