css url path fix

--- a/_sass/_app.scss
+++ b/_sass/_app.scss
@@ -1,9 +1,9 @@
-@import url(/public/font/telex/telex-regular.css);
-@import url(/public/font/fontello/css/animation.css);
-@import url(/public/font/fontello/css/fontello.css);
+@import url(public/font/telex/telex-regular.css);
+@import url(public/font/fontello/css/animation.css);
+@import url(public/font/fontello/css/fontello.css);
 @font-face {
     font-family: E;
-    src: url('/public/font/Electrolize.ttf');
+    src: url('public/font/Electrolize.ttf');
 }
 
 ::-webkit-scrollbar {
