add avatar relative path

--- a/_sass/_app.scss
+++ b/_sass/_app.scss
@@ -61,7 +61,7 @@ a {
             width: 80px;
             height: 80px;
             margin-right: 20px;
-            background: url("public/image/avatar.jpg") no-repeat;
+            background: url("../../public/image/avatar.jpg") no-repeat;
             background-size: 80px;
             border-radius: 15%;
         }
