add ico relative path

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,6 @@
 <link rel="stylesheet" href="{{ "/public/scss/main.css" | prepend: site.baseurl }}" ／>
 <!--自定义markdown语法-->
 <link rel="stylesheet" href="{{ "/public/css/markdown.css" | prepend: site.baseurl }}" ／>
+<link rel="shortcut icon" href="{{ "/favicon.ico" | prepend: site.baseurl }}">
+<link rel="bookmark" href="{{ "/favicon.ico" | prepend: site.baseurl }}">
 </head>
